--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,7 @@
 {% extends "layout.html" %}
 
 {% block content %}
+
+<canvas style="width: 800px; height:600px;"id="three"> </canvas>
 <p> Hello world </p>
 {% endblock %}
