--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,6 +10,7 @@
     {% block content %}{% endblock %}
     <footer>
     </footer>
+    <script src="js/three.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
