--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,7 +10,13 @@
     {% block content %}{% endblock %}
     <footer>
     </footer>
+		<script
+			  src="http://code.jquery.com/jquery-3.1.1.min.js"
+			  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+			  crossorigin="anonymous"></script>
+		
     <script src="js/three.js"></script>
+    <script src="js/collada.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
