--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,16 +7,19 @@
 </head>
 
 <body>
+  <div id="svg-iconset">
+    {% include "symbol/svg/sprite.symbol.svg" %}
+  </div>
     {% block content %}{% endblock %}
     <footer>
     </footer>
-		<script
+		<!--script
 			  src="http://code.jquery.com/jquery-3.1.1.min.js"
 			  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-			  crossorigin="anonymous"></script>
+			  crossorigin="anonymous"></script-->
 		
-    <script src="js/three.js"></script>
+    <!-- <script src="js/three.js"></script>
     <script src="js/collada.js"></script>
-    <script src="js/script.js"></script>
+    <script src="js/script.js"></script> -->
 </body>
 </html>
