Added services page

--- a/source/scss/layouts/nav.scss
+++ b/source/scss/layouts/nav.scss
@@ -1,4 +1,5 @@
 nav {
+  margin-bottom: -4em;
   background-color: transparentize(white, .2);
   height: 4em;
   position: relative;
@@ -7,15 +8,5 @@ nav {
   .logo {
     height: 50px;
     width: 50px;
-  }
-  li {
-    list-style: none;
-    float: left;
-    margin-left: 1em;
-    a { 
-      text-decoration: none;
-      font-weight: 800;
-      font-size: 1.1em;
-    }
   }
 }
