--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,6 +7,20 @@
 </head>
 
 <body>
+<nav>
+  <svg class="logo"> 
+     <use xlink:href="#logo"></use>
+  </svg>
+  <li class="nav-item">
+    <a href="index.html">Home</a>
+  </li>
+  <li class="nav-item">
+    <a href="services.html">Services</a>
+  </li>
+  <li class="nav-item">
+    <a href="#">About</a>
+  </li>
+</nav>
   <div id="svg-iconset">
     {% include "symbol/svg/sprite.symbol.svg" %}
   </div>
