Added moving background

--- a/source/scss/layouts/header.scss
+++ b/source/scss/layouts/header.scss
@@ -1,5 +1,6 @@
 header {
-  background-image: url("../images/header-background.png");
+  background-image: url("../images/house_pattern.png");
+  background-color: $blue-green;
   height: 70vh;
   min-height: 500px;
   width: 100%;
