--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 
 <!--<canvas style="width: 800px; height:600px;"id="three"> </canvas>-->
 
-<header> 
+<header id="header"> 
   <svg class="header-text"> 
      <use xlink:href="#header-text"></use>
   </svg>
