--- a/templates/layout.html
+++ b/templates/layout.html
@@ -35,6 +35,7 @@
     <!-- <script src="js/three.js"></script>
     <script src="js/collada.js"></script>
     <script src="js/script.js"></script> -->
+    <script src="js/Tween.js"></script>
     <script src="js/background.js"></script>
 </body>
 </html>
