--- a/source/style.scss
+++ b/source/style.scss
@@ -26,4 +26,6 @@
 @import "scss/layouts/header.scss";
 @import "scss/layouts/l-bottom-menu.scss";
 @import "scss/layouts/l-full-height.scss";
+@import "scss/layouts/l-side-nav.scss";
+@import "scss/layouts/footer.scss";
 
