--- a/templates/layout.html
+++ b/templates/layout.html
@@ -26,6 +26,11 @@
   </div>
     {% block content %}{% endblock %}
     <footer>
+      <ul>
+          <li class="nav-item"><a href="#"><img height="32" src="images/twitter.png"></a></li>
+          <li class="nav-item"><a href="mailto:pcvonz@gmail.com"><p> faxian@faxian.com</p></a></li>
+          <li class="nav-item">Sustainability Matters</li>
+      </ul>
     </footer>
 		<!--script
 			  src="http://code.jquery.com/jquery-3.1.1.min.js"
@@ -36,6 +41,6 @@
     <script src="js/collada.js"></script>
     <script src="js/script.js"></script> -->
     <script src="js/Tween.js"></script>
-    <script src="js/background.js"></script>
+    <!--script src="js/background.js"></script-->
 </body>
 </html>
