--- a/templates/index.html
+++ b/templates/index.html
@@ -5,29 +5,44 @@
 <!--<canvas style="width: 800px; height:600px;"id="three"> </canvas>-->
 
 <header id="header"> 
-  <svg class="header-text"> 
-     <use xlink:href="#header-text"></use>
-  </svg>
-  <h1> Sustainability <br> Consulting </h1>
+  <div class="header-logo">
+    <svg class="header-text"> 
+       <use xlink:href="#header-text"></use>
+    </svg>
+  </div>
+  <div class="header-line">
+    <h1> Sustainability <br> Consulting </h1>
+    <ul>
+      <li> Energy Benchmarking </li>
+      <li> LEED Certification </li>
+      <li> Materials </li>
+    </ul>
+  </div>
+ 
 </header>
+<div class="arrow">
+  <svg> 
+     <use xlink:href="#arrow"></use>
+  </svg>
+</div>
 
 <div class="l-container"> 
 
-  <div class="item">
-    <svg class="item-icon"> 
-       <use xlink:href="#plug"></use>
-    </svg>
+  <div class="item item-right">
     <div class="text">
       <h2> Energy <br> Benchmarking</h2> 
       <p> Sequi sed non qui et. Voluptatem quia incidunt molestiae voluptate et ut
       eum. Qui veniam soluta quas minus laborum quaerat quia corrupti. Itaque qui
       at voluptatem pariatur velit.</p>
     </div>
+    <svg class="item-icon"> 
+       <use xlink:href="#plug"></use>
+    </svg>
   </div>
 
-  <div class="item-left">
+  <div class="item item-left">
     <div class="text">
-      <h2> Energy <br> Benchmarking</h2> 
+      <h2> LEED <br> Certification </h2> 
       <p> Sequi sed non qui et. Voluptatem quia incidunt molestiae voluptate et ut
       eum. Qui veniam soluta quas minus laborum quaerat quia corrupti. Itaque qui
       at voluptatem pariatur velit.</p>
@@ -39,18 +54,20 @@
 
   <div class="items-cert">
     <h2> Certified Materials </h2>
-    <svg class="item-icon"> 
-       <use xlink:href="#wall"></use>
-    </svg>
-    <svg class="item-icon"> 
-       <use xlink:href="#paint"></use>
-    </svg>
-    <svg class="item-icon"> 
-       <use xlink:href="#window"></use>
-    </svg>
-    <svg class="item-icon"> 
-       <use xlink:href="#roof"></use>
-    </svg>
+    <div class="icon-gal">
+      <svg class="item-icon"> 
+         <use xlink:href="#wall"></use>
+      </svg>
+      <svg class="item-icon"> 
+         <use xlink:href="#paint"></use>
+      </svg>
+      <svg class="item-icon"> 
+         <use xlink:href="#window"></use>
+      </svg>
+      <svg class="item-icon"> 
+         <use xlink:href="#roof"></use>
+      </svg>
+    </div>
     
   </div>
 
