--- a/source/scss/layouts/l-side-nav.scss
+++ b/source/scss/layouts/l-side-nav.scss
@@ -1,17 +1,23 @@
 .l-side-nav {
   width: 20%;
   background-color: $blue-green;
-  a {
-    text-decoration: none;
-    font-size: 1.2em;
-    li {
-      list-style: none;
+  li {
+    list-style: none;
+    a {
+      text-decoration: none;
       color: white;
-    }
+      font-size: 1.2em;
+      }
   }
   position: fixed;
   top: -37em;
   padding-top: 57em;
   padding-left: 14%;
   padding-bottom: 100vh;
+}
+
+:target {
+  color: black;
+  font-weight: 800;
+  text-decoration: underline;
 }
