Add snap and bower rc

--- a/templates/services.html
+++ b/templates/services.html
@@ -101,5 +101,6 @@
 
 {% block scripts %}
   <script src="js/TWEEN.js"></script>
+  <script src="/lib/Snap.js/snap.js"></script>
   <script src="js/background.js"></script>
 {% endblock %}
