--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,9 +1,9 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Sweet New Website</title>
     <link rel=StyleSheet href="css/style.css" TYPE="text/css" >
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title> Faxian </title>
     {% block header %}
     {% endblock %}
 </head>
