--- a/templates/services.html
+++ b/templates/services.html
@@ -76,8 +76,7 @@
 </div>
 
   <div class="l-side-nav">
-    <svg class="service-icon"> 
-       <use id="svg-icon" xlink:href="#paint"></use>
+    <svg id="svg">
     </svg>
     <ul>
       <li class=""><a id="paint_nav" href="#paint_nav">Paint</a></li>
@@ -100,7 +99,6 @@
 {% endblock %}
 
 {% block scripts %}
-  <script src="js/TWEEN.js"></script>
-  <script src="/lib/Snap.js/snap.js"></script>
+  <script src="js/snap.svg.js"></script>
   <script src="js/background.js"></script>
 {% endblock %}
