Adding smooth scroll and mobile for index

--- a/source/style.scss
+++ b/source/style.scss
@@ -15,6 +15,7 @@
 @import "scss/modules/icons.scss";
 @import "scss/modules/item.scss";
 @import "scss/modules/nav-item.scss";
+@import "scss/modules/arrow.scss";
 
 //layouts
 @import "scss/layouts/l-component.scss";
