--- a/templates/services.html
+++ b/templates/services.html
@@ -59,7 +59,23 @@
   </div>
   <div data-anchor="flooring" class="section l-full-height">
       <div class="header-text">
-        <h1> Roofing </h1>
+        <h1> Flooring </h1>
+        <p> 
+          Neque molestiae repellat iusto aspernatur recusandae quisquam sit non.
+          Aut sequi voluptatum ex. Quod omnis officiis dolor aut consequatur enim et.
+          Asperiores aut ipsum ut est voluptatem aut repellendus. Cumque accusamus
+          doloremque laudantium fugit cum fugiat culpa.
+        </p>
+        <p>
+          Officia laboriosam placeat cumque ad qui omnis earum aut. Omnis ab iste id
+          sapiente in consequatur dolore enim. Dolor voluptatibus doloremque est
+          similique et. Est distinctio similique porro saepe vel quibusdam. Vel vero
+          nostrum ad pariatur consectetur architecto tempore consequatur.  </div>
+        </p>
+  </div>
+  <div data-anchor="windows" class="section l-full-height">
+      <div class="header-text">
+        <h1> Windows </h1>
         <p> 
           Neque molestiae repellat iusto aspernatur recusandae quisquam sit non.
           Aut sequi voluptatum ex. Quod omnis officiis dolor aut consequatur enim et.
@@ -83,6 +99,7 @@
       <li class=""><a id="roof_nav" href="#roof_nav">Roofing</a></li>
       <li class=""><a id="wall_nav" href="#wall_nav">Wall</a></li>
       <li class=""><a id="floor_nav" href="#floor_nav">Flooring</li></a>
+      <li class=""><a id="window_nav" href="#window_nav">Windows</li></a>
     </ul>
   </div>
   <!--div class="l-bottom-menu"> 
