--- a/source/scss/layouts/header.scss
+++ b/source/scss/layouts/header.scss
@@ -10,17 +10,23 @@
 header {
   background-image: url("../images/house_pattern_2.png");
   background-color: #437e63;
-  height: 90vh;
+  @include breakpoint($desktop) {
+    height: 100vh;
+  }
   min-height: 500px;
-  max-height: 800px;
   width: 100%;
   display: flex;
   animation: animatedBackground 25s linear infinite;
   justify-content: center;
   align-content: center;
+  flex-direction: column;
+  @include breakpoint($tablet) {
+    flex-direction: row;
+  }
   .header-logo {
     align-self: center;
     width: 20em;
+    margin-top: 4em;
     ul {
       margin: 0;
       width: 20em;
@@ -54,6 +60,12 @@ header {
   animation: fadein .5s ease;
   svg {
     height: 3em;
+    width: 4em;
+    outline: none;
+    display: none;
+    @include breakpoint($tablet) {
+      display: unset;
+    }
   }
 }
 
