--- a/source/scss/modules/item.scss
+++ b/source/scss/modules/item.scss
@@ -1,23 +1,26 @@
 .item {
-  padding: 5em;
-  height: 12em;
+  padding: 2em;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  flex-direction: column;
+  @include breakpoint($tablet) {
+    flex-direction: row;
+  }
+
 }
 .item-right {
   background-color: $light-green;
   @include breakpoint($tablet) {
-    height: 15em;
   }
   .item-icon{
-      @include span(12 of 12);
       @include breakpoint($tablet) {
-        @include push(3 of 12);
-        @include span(3 of 12);
+        order: 0;
       }
   }
   .text {
-    @include span(12 of 12);
     @include breakpoint($tablet) {
-      @include span(6 of 12 last);
+      order: 1;
     }
     color: white;
   }
@@ -25,16 +28,11 @@
 .item-left {
   background-color: $blue-green;
   .item-icon {
-      @include span(12 of 12 last);
       @include breakpoint($tablet) {
-        @include span(6 of 12 last);
     }
   }
   .text {
-    @include span(12 of 12);
     @include breakpoint($tablet) {
-      @include push(2 of 12);
-      @include span(4 of 12);
       text-align: right;
     }
     color: white;
@@ -42,10 +40,16 @@
 }
 .text {
   max-width: 20em;
+  align-self: center;
+}
+.item-icon{
+  align-self: center;
+  max-height: 10em;
 }
 
 .items-cert {
-  height: 200px;
+  @include breakpoint($tablet) {
+  }
   background-color: $light-green;
   h2 {
     margin-top: 0;
@@ -57,13 +61,24 @@
     display: flex;
     justify-content: center;
     align-content: center;
-    flex-wrap: wrap;
+    flex-direction: column;
+    @include breakpoint($tablet) {
+      flex-direction: row;
+    }
+    div {
+      align-self: center;
+      p {
+        color: white;
+        text-align: center;
+        font-size: 1.2em;
+      }
+      margin-right: 2em;
     svg {
       height: 8em;
       width: 8em;
       background-color: white;
       border-radius: 100%;
-      margin-right: 2em;
+    }
     }
   }
   padding-bottom: 3em;
