--- a/templates/index.html
+++ b/templates/index.html
@@ -21,12 +21,15 @@
  
 </header>
 <div class="arrow">
-  <svg> 
+  <a id="start-container">
+    <svg> 
      <use xlink:href="#arrow"></use>
   </svg>
+  </a>
 </div>
 
 <div class="l-container"> 
+  <a ></a>
 
   <div class="item item-right">
     <div class="text">
@@ -55,18 +58,46 @@
   <div class="items-cert">
     <h2> Certified Materials </h2>
     <div class="icon-gal">
-      <svg class="item-icon"> 
-         <use xlink:href="#wall"></use>
-      </svg>
-      <svg class="item-icon"> 
-         <use xlink:href="#paint"></use>
-      </svg>
-      <svg class="item-icon"> 
-         <use xlink:href="#window"></use>
-      </svg>
-      <svg class="item-icon"> 
-         <use xlink:href="#roof"></use>
-      </svg>
+      <div>
+        <a href="services.html#paint_nav">
+          <p>Paint</p>
+          <svg class="item-icon"> 
+             <use xlink:href="#paint"></use>
+          </svg>
+        </a>
+      </div>
+      <div>
+        <a href="services.html#roof_nav">
+          <p>Roofing</p>
+          <svg class="item-icon"> 
+             <use xlink:href="#roof"></use>
+          </svg>
+        </a>
+      </div>
+      <div>
+        <a href="services.html#wall_nav">
+          <p>Walling</p>
+          <svg class="item-icon"> 
+             <use xlink:href="#wall"></use>
+          </svg>
+        </a>
+      </div>
+      <div>
+        <a href="services.html#floor_nav">
+          <p>Flooring</p>
+          <svg class="item-icon"> 
+             <use xlink:href="#floor"></use>
+          </svg>
+        </a>
+      </div>
+      <div>
+        <a href="services.html#window_nav">
+          <p>Windows</p>
+          <svg class="item-icon"> 
+             <use xlink:href="#window"></use>
+          </svg>
+        </a>
+      </div>
     </div>
     
   </div>
@@ -75,4 +106,8 @@
 </div>
 
 
+{% endblock %}
+
+{% block scripts %}
+  <script src="js/smooth_scroll.js"></script>
 {% endblock %}
