--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,6 +4,8 @@
     <link rel=StyleSheet href="css/style.css" TYPE="text/css" >
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title> Faxian </title>
+    <link rel="shortcut icon"
+     href="/images/favicon.png" />
     {% block header %}
     {% endblock %}
 </head>
@@ -20,7 +22,7 @@
     <a href="services.html#paint_nav">Services</a>
   </li>
   <li class="nav-item">
-    <a href="#">About</a>
+    <a href="about.html">About</a>
   </li>
 </nav>
   <div id="svg-iconset">
@@ -30,7 +32,7 @@
     <footer>
       <ul>
           <li class="nav-item"><a href="mailto:pcvonz@gmail.com"><p> faxian@faxian.com</p></a></li>
-          <li class="nav-item">Sustainability Matters</li>
+          <li class="nav-item"><p>Sustainability Matters</p></li>
       </ul>
     </footer>
 		<!--script
