--- a/templates/services.html
+++ b/templates/services.html
@@ -116,6 +116,10 @@
 {% endblock %}
 
 {% block scripts %}
+  <script src="lib/jquery/dist/jquery.js"></script>
   <script src="js/snap.svg.js"></script>
   <script src="js/background.js"></script>
+  <script src="lib/fullpage.js/vendors/scrolloverflow.js"></script>
+  <script src="lib/fullpage.js/dist/jquery.fullpage.js"></script>
+  <script src="js/init_fullpage.js"></script>
 {% endblock %}
