Adding about page

--- a/source/scss/layouts/l-side-nav.scss
+++ b/source/scss/layouts/l-side-nav.scss
@@ -1,5 +1,8 @@
 .l-side-nav {
   display: none;
+  @include breakpoint($tablet) {
+    display: block;
+  }
   width: 20%;
   background-color: $blue-green;
   svg {
