--- a/source/style.scss
+++ b/source/style.scss
@@ -5,6 +5,7 @@
 @import "scss/abstracts/abstracts.scss";
 @import "scss/abstracts/variables.scss";
 @import "scss/abstracts/global.scss";
+@import "scss/abstracts/staff.scss";
 
 
 @import "scss/custom.scss";
@@ -29,6 +30,7 @@
 @import "scss/layouts/l-full-height.scss";
 @import "scss/layouts/l-side-nav.scss";
 @import "scss/layouts/footer.scss";
+@import "scss/layouts/l-about.scss";
 
 //overrides
 @import "scss/overrides.scss";
