--- a/templates/about.html
+++ b/templates/about.html
@@ -1,9 +1,46 @@
 {% extends "layout.html" %}
 
 {% block content %}
-<div class="l-container">
-  <div>
-    <p> Hello </p>
+<div class="l-about">
+  <div class="content">
+    <h1> Our Story</h1>
+    <p> 
+      Accusamus ut dolor sed accusamus doloribus quo. Enim praesentium in ratione
+      nesciunt. Aut odit quia voluptates dolores at nihil modi. Itaque officiis
+      eos cumque laboriosam ut. Qui ratione est aut ea. Labore autem cupiditate
+      cupiditate rem eos.
+    </p>
+    <p> 
+      Quos est atque perferendis. Ea voluptatibus dicta architecto.
+      Exercitationem quas non perspiciatis sint itaque laborum. Qui error
+      molestiae velit est non.
+    </p>
+
+    <h1> Meet The Staff </h2>
+
+    <div class="staff-images">
+      <div class="image-card">
+        <p> Jill Employee </p>
+          <div class="staff staff-1"> </div>
+        <p> CEO </p>
+      </div>
+      <div class="image-card">
+        <p> Jill Employee </p>
+          <div class="staff staff-2"> </div>
+        <p> CEO </p>
+      </div>
+      <div class="image-card">
+        <p> Jill Employee </p>
+          <div class="staff staff-3"> </div>
+        <p> CEO </p>
+      </div>
+      <div class="image-card">
+        <p> Jill Employee </p>
+          <div class="staff staff-4"> </div>
+        <p> CEO </p>
+      </div>
+
+    </div>
   </div>
 </div>
 
