--- a/templates/index.html
+++ b/templates/index.html
@@ -109,5 +109,6 @@
 {% endblock %}
 
 {% block scripts %}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-scrollTo/2.1.2/jquery.scrollTo.js"></script>
   <script src="js/smooth_scroll.js"></script>
 {% endblock %}
