--- a/templates/services.html
+++ b/templates/services.html
@@ -8,7 +8,7 @@
 {% block content %}
 
 <div id="fullpage">
-  <div data-anchor="paint" class="section l-full-height">
+  <div data-anchor="paint" class="section fp-auto-height-responsive l-full-height">
       <div class="header-text">
         <h1> Paint </h1>
         <p> 
@@ -25,7 +25,7 @@
         </p>
   </div>
 
-  <div data-anchor="roofing" class="section l-full-height">
+  <div data-anchor="roofing" class="section fp-auto-height-responsive l-full-height">
       <div class="header-text">
         <h1> Roofing </h1>
         <p> 
@@ -41,7 +41,7 @@
           nostrum ad pariatur consectetur architecto tempore consequatur.  </div>
         </p>
   </div>
-  <div data-anchor="wall" class="section l-full-height">
+  <div data-anchor="wall" class="section fp-auto-height-responsive l-full-height">
       <div class="header-text">
         <h1> Wall </h1>
         <p> 
@@ -57,7 +57,7 @@
           nostrum ad pariatur consectetur architecto tempore consequatur.  </div>
         </p>
   </div>
-  <div data-anchor="flooring" class="section l-full-height">
+  <div data-anchor="flooring" class="section fp-auto-height-responsive l-full-height">
       <div class="header-text">
         <h1> Flooring </h1>
         <p> 
@@ -73,7 +73,7 @@
           nostrum ad pariatur consectetur architecto tempore consequatur.  </div>
         </p>
   </div>
-  <div data-anchor="windows" class="section l-full-height">
+  <div data-anchor="windows" class="section fp-auto-height-responsive l-full-height">
       <div class="header-text">
         <h1> Windows </h1>
         <p> 
