--- a/source/scss/layouts/nav.scss
+++ b/source/scss/layouts/nav.scss
@@ -1,7 +1,8 @@
 nav {
-  background-color: transparentize(white, .2);
+  position: relative;
+  display: block;
+  background-color: white;
   height: 3em;
-  position: fixed;
   padding: 1em;
   top: 0;
   width: 100%;
