--- a/templates/index.html
+++ b/templates/index.html
@@ -34,9 +34,11 @@
   <div class="item item-right">
     <div class="text">
       <h2> Energy <br> Benchmarking</h2> 
-      <p> Sequi sed non qui et. Voluptatem quia incidunt molestiae voluptate et ut
-      eum. Qui veniam soluta quas minus laborum quaerat quia corrupti. Itaque qui
-      at voluptatem pariatur velit.</p>
+      <p> 
+      Our tried and true industry standard practices will make sure your buildings
+      run at peak efficiency. Our certified and trained staff will make sure the
+      job get's done and done well. 
+      </p>
     </div>
     <svg class="item-icon"> 
        <use xlink:href="#plug"></use>
@@ -46,9 +48,11 @@
   <div class="item item-left">
     <div class="text">
       <h2> LEED <br> Certification </h2> 
-      <p> Sequi sed non qui et. Voluptatem quia incidunt molestiae voluptate et ut
-      eum. Qui veniam soluta quas minus laborum quaerat quia corrupti. Itaque qui
-      at voluptatem pariatur velit.</p>
+      <p> 
+      We are LEED certified. We make sure all our practices adhere to the
+      comprehensive system of interrelated standards covering aspects from the
+      design and construction to the maintenance and operation of buildings.
+      </p>
     </div>
     <svg class="item-icon"> 
        <use xlink:href="#leed"></use>
