--- a/templates/about.html
+++ b/templates/about.html
@@ -5,39 +5,38 @@
   <div class="content">
     <h1> Our Story</h1>
     <p> 
-      Accusamus ut dolor sed accusamus doloribus quo. Enim praesentium in ratione
-      nesciunt. Aut odit quia voluptates dolores at nihil modi. Itaque officiis
-      eos cumque laboriosam ut. Qui ratione est aut ea. Labore autem cupiditate
-      cupiditate rem eos.
-    </p>
-    <p> 
-      Quos est atque perferendis. Ea voluptatibus dicta architecto.
-      Exercitationem quas non perspiciatis sint itaque laborum. Qui error
-      molestiae velit est non.
+      Our CEO has tread through the business of architecture & development. She
+      always had a passion for making her developments adhere to the latest
+      trends in green environmentally friendly building, but she quickly realized that
+      her partners did not understand the ins and outs of cutting edge
+      environmentally friendly building practices. She put down her drafting pencil and has
+      since decided to assist other developers in making sure that they build
+      the most forward thinking and efficient buildings possible with the latest
+      materials and technology on the market. 
     </p>
 
     <h1> Meet The Staff </h2>
 
     <div class="staff-images">
       <div class="image-card">
-        <p> Jill Employee </p>
+        <p> Jill Waits </p>
           <div class="staff staff-1"> </div>
         <p> CEO </p>
       </div>
       <div class="image-card">
-        <p> Jill Employee </p>
+        <p> Judy</p>
           <div class="staff staff-2"> </div>
-        <p> CEO </p>
+        <p> VP </p>
       </div>
       <div class="image-card">
-        <p> Jill Employee </p>
+        <p> James </p>
           <div class="staff staff-3"> </div>
         <p> CEO </p>
       </div>
       <div class="image-card">
-        <p> Jill Employee </p>
+        <p> Polly </p>
           <div class="staff staff-4"> </div>
-        <p> CEO </p>
+        <p> Company Parrot</p>
       </div>
 
     </div>
