Adding social media

--- a/source/scss/layouts/footer.scss
+++ b/source/scss/layouts/footer.scss
@@ -1,7 +1,9 @@
 footer {
   background-color: $blue-green;
-  height: 4em;
+  height: 7em;
   margin: 0;
+  position: relative;
+  top: -1em;
   padding: 0;
   p {
     color: white;
