--- a/source/scss/layouts/header.scss
+++ b/source/scss/layouts/header.scss
@@ -8,11 +8,11 @@
 }
 
 header {
-  margin-top: -4em;
   background-image: url("../images/house_pattern_2.png");
   background-color: #437e63;
-  @include breakpoint($desktop) {
+  @include breakpoint($tablet) {
     height: 100vh;
+    margin-top: -4em;
   }
   min-height: 500px;
   width: 100%;
@@ -27,7 +27,13 @@ header {
   .header-logo {
     align-self: center;
     width: 20em;
-    margin-top: 4em;
+    margin-top: 2em;
+    border-bottom: 8px solid white;
+    @include breakpoint($tablet) {
+      border-right: 8px solid white;
+      margin-right: .5em;
+      border-bottom: 0px solid white;
+    }
     ul {
       margin: 0;
       width: 20em;
@@ -40,7 +46,7 @@ header {
   }
   .header-line {
     align-self: center;
-    margin-left: 1em;
+    margin-left: 3em;
     h1 {
       color: white;
       font-size: 2.5em;
@@ -49,6 +55,13 @@ header {
       padding: 0;
       list-style: none;
       color: white;
+      li {
+        margin-top: .3em;
+        img {
+          height: 1em;
+          margin-right: .8em;
+        }
+      }
     }
   }
 }
