--- a/source/scss/layouts/l-full-height.scss
+++ b/source/scss/layouts/l-full-height.scss
@@ -1,6 +1,7 @@
 .l-full-height {
   overflow-y: scroll;
   position: relative;
+  padding: .8em;
   @include container(12);
   background-color: $blue-green;
   //display: flex;
