--- a/templates/about.html
+++ b/templates/about.html
@@ -15,30 +15,62 @@
       materials and technology on the market. 
     </p>
 
-    <h1> Meet The Staff </h2>
+    <h1> Meet The Staff </h1>
 
     <div class="staff-images">
       <div class="image-card">
-        <p> Jill Waits </p>
+        <h3> Jill Waits </h3>
           <div class="staff staff-1"> </div>
         <p> CEO </p>
       </div>
       <div class="image-card">
-        <p> Judy</p>
+        <h3> Judy</h3>
           <div class="staff staff-2"> </div>
         <p> VP </p>
       </div>
       <div class="image-card">
-        <p> James </p>
+        <h3> James </h3>
           <div class="staff staff-3"> </div>
-        <p> CEO </p>
+        <p> LEED Expert </p>
       </div>
       <div class="image-card">
-        <p> Polly </p>
+        <h3> Polly </h3>
           <div class="staff staff-4"> </div>
         <p> Company Parrot</p>
       </div>
-
+    </div>
+    <div class="question">
+      <h1> Ask us a Question </h1>
+        <form> 
+          <div class="form-box">
+                <label for="name">Name:</label>
+            <div>
+                <input type="text" id="name" name="user_name" />
+            </div>
+          </div>
+          <div class="form-box">
+                <label for="mail">E-mail:</label>
+            <div>
+                <input type="email" id="mail" name="user_mail" />
+            </div>
+          </div>
+          <div class="form-box">
+                <label for="mail">Subject</label>
+            <div>
+                <input type="email" id="mail" name="user_mail" />
+            </div>
+          </div>
+          <div class="form-box">
+                <label for="msg">Message:</label>
+            <div>
+                <textarea id="msg" name="user_message"></textarea>
+            </div>
+          </div>
+          <div class="form-button">
+            <button> SUBMIT </button>
+          </div>
+          
+        </form>
     </div>
   </div>
 </div>
