--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,7 @@
       <li> Energy Benchmarking </li>
       <li> LEED Certification </li>
       <li> Materials </li>
+      <li> <a href="#"> <img src="images/twitter.png"></a> <a href="#"><img src="images/fb.png"></a></li>
     </ul>
   </div>
  
