--- a/source/scss/layouts/l-about.scss
+++ b/source/scss/layouts/l-about.scss
@@ -8,6 +8,17 @@
     @include breakpoint($tablet) {
       @include push(3)
       @include span(6);
+      .question {
+       clear: both; 
+       form {
+          .form-box {
+            @include gallery(6 of 12);
+          }
+          .form-button {
+            clear: both;
+          }
+       }
+      }
     }
     p {
       color: white;
@@ -18,6 +29,9 @@
       width: 50%;
     }
     h2 {
+      color: white;
+    }
+    h3 {
       color: white;
     }
   }
